--- a/tutorials/scl-1/doc/poisson_homogeneous.dox
+++ b/tutorials/scl-1/doc/poisson_homogeneous.dox
@@ -742,7 +742,7 @@ If we consider \f$ {\bf u} \f$ as the solution vector such that \f$ {u} = [u_1, 
     \bf {K(u_0 + u_e)}= f
   \end{equation}
 \f]
-Here, \f$ u_e \f$ is a zeros vector but we will imposed those removed degrees of freedom in it. For example, 
+Here, \f$ u_e \f$ is the vector where we will impose those removed degrees of freedom in it. For example, 
  \f[
 \begin{equation}
 {\mathbf { u}_e} = \left[ 
@@ -757,7 +757,7 @@ Here, \f$ u_e \f$ is a zeros vector but we will imposed those removed degrees of
 \label{eq:u_e}
 \end{equation}
 \f]
-Here, \f$ u_\text{n-m+1} and u_\text{n} \f$ = DOFs of BOUNDARY_CONDITION Blockset.
+Here, \f$ u_\text{n-m+1} \f$ and \f$u_\text{n} \f$ denotes  DOFs the of BOUNDARY_CONDITION Blockset.
 
 This approach will allow us to streamline the procedure and ensure that the removed degrees of freedom are properly reintegrated into the calculations. However, to simplify this cumulative process, we will address rest of the part during the assembling phase in the upcoming sub-section.
 
@@ -805,7 +805,7 @@ but it is done automatically and user does not have to manually add codes to pus
 - Third, previously in in `boundaryCondition()`, we modified \f$ \bf{u} \f$  and we were waiting to impose the removed DoFs to get the admissible solution. Here, this operation is done by the lamda function 'set_values_to_bc_dofs'. 
 
 
-We enforce the following code snippet to set dofs. First we get the reference \f$ \bf{u}\f$ for BC. Then using 'get_bc_hook' as preprocessing of object 'fe' we set the boundary condition values to the indices of \f$ \bf{u_e} \f$.
+We enforce the following code snippet to set dofs. First we get the reference \f$ \bf{u}\f$ for BC. Then using 'get_bc_hook' as preprocessing of object 'fe' we set the boundary condition values to \f$ \bf{u_e} \f$.
 \code
    auto set_values_to_bc_dofs = [&](auto &fe) {
       auto get_bc_hook = [&]() {
@@ -850,7 +850,7 @@ Note:For the current homogenous problem, if we consider zero boundary condition,
     MoFEMFunctionReturn(0);
 }
 \endcode
-Here, the lamda function `calculate_residual_from_set_values_on_bc` is to get the \f$\bf {K{u_e}}\f$.  Inside of it, the `OpInternal` integrator serves a dual purpose: it assembles the matrix and undertakes integration, effectively performing a linear multiplication. 
+Here, the lamda function `calculate_residual_from_set_values_on_bc` is to get the \f$\bf {K{u_e}}\f$.  Inside of it, the `OpInternal` integrator serves a dual purpose: it  undertakes system of equations and assembles the matrices, effectively performing a linear multiplication. 
 Upon pushing OpInternal to the pipeline manager, -1 is passed as it is alongside \f$ \bf K {u_e} \f$  as in equation (17). 
 
 \f[
