updated mixed_hyperelasticity; delete . file

--- a/jupyter/skel/ukacm_autumn_school/mixed_hyperelasticity/mixed_hyperelasticity.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/mixed_hyperelasticity/mixed_hyperelasticity.ipynb
@@ -43,7 +43,7 @@
    "id": "10a5ca10",
    "metadata": {},
    "source": [
-    "## Derivation of the mixed weak form for the Poisson equation\n",
+    "## Derivation of the mixed weak form\n",
     "\n",
     "### Coservation law and boundary conditions\n",
     "\n",
@@ -1062,7 +1062,7 @@
     "Since analytical solution is unknown, we plot the convergence of the global norms of displacements and stresses. Additionally, with the option of projecting displacement results from $L_2$ field to $H^1$ in the mixed case, we can also plot the norm of their difference: \n",
     "\n",
     "\\begin{equation}\n",
-    "\\sqrt{\\frac{1}{\\mu(\\Omega)} \\int\\limits_\\Omega ||\\mathbf u_{L_2} - \\mathbf u_{H^1}||^2 d\\Omega}\n",
+    "\\sqrt{ \\int\\limits_\\Omega ||\\mathbf u_{L_2} - \\mathbf u_{H^1}||^2 d\\Omega}\n",
     "\\end{equation}"
    ]
   },
